--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,7 @@ before_script:
   - sudo mkdir -p /var/qmail/bin
   - sudo cp test/fakesendmail.sh /var/qmail/bin/sendmail
   - sudo cp test/fakesendmail.sh /usr/sbin/sendmail
-  - |
-    if [[ $TRAVIS_PHP_VERSION = "hhv"* ]]; then
-      echo 'sendmail_path = "/usr/sbin/sendmail -t -i "' >> /etc/hhvm/php.ini
-    else
-      echo 'sendmail_path = "/usr/sbin/sendmail -t -i "' > $(php --ini|grep -m 1 "ini files in:"|cut -d ":" -f 2)/sendmail.ini
-    fi
+  - echo 'sendmail_path = "/usr/sbin/sendmail -t -i "' > $(php --ini|grep -m 1 "ini files in:"|cut -d ":" -f 2)/sendmail.ini
 
 script: ./vendor/bin/phpunit --configuration ./travis.phpunit.xml.dist
 
@@ -47,21 +42,14 @@ jobs:
       before_script:
       script: ./vendor/bin/php-cs-fixer --diff --dry-run --verbose fix
       after_script:
-      php: 5.5
+      php: 7.2
       env: CS_CHECK=1
     - stage: test
-      php: 5.5
-    - php: 5.6
-    - php: 7.0
-    - php: 7.1
-    - php: 7.2
+      php: 7.2
     - php: 7.3
       env: CODE_COVERAGE=1
     - php: nightly
-    - php: hhvm
-      dist: trusty
 
 matrix:
   allow_failures:
     - php: nightly
-    - php: hhvm
