--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,12 @@ cache:
     - $HOME/.composer/cache
 
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y -qq postfix
+  - sudo apt update -qq
+  - sudo apt install -y -qq postfix
 
 install:
-  - REMOVE_PACKAGE="friendsofphp/php-cs-fixer"; if [ "$CS_CHECK" = 1 ]; then REMOVE_PACKAGE="phpunit/phpunit"; fi; composer remove --no-update --no-scripts --dev $REMOVE_PACKAGE
   - composer remove --no-update --no-scripts --dev phpdocumentor/phpdocumentor
-  - composer install
-  - if [ "$CODE_COVERAGE" != 1 ]; then phpenv config-rm xdebug.ini || true; fi
+  - composer install --no-interaction --prefer-source
 
 before_script:
   - sudo service postfix stop
@@ -25,11 +23,9 @@ before_script:
   - sudo cp test/fakesendmail.sh /usr/sbin/sendmail
   - echo 'sendmail_path = "/usr/sbin/sendmail -t -i "' > $(php --ini|grep -m 1 "ini files in:"|cut -d ":" -f 2)/sendmail.ini
 
-script: ./vendor/bin/phpunit --configuration ./travis.phpunit.xml.dist
+script: ./vendor/bin/phpunit --configuration ./travis.phpunit.xml.dist --coverage-clover clover.xml
 
-after_script:
-  - if [ "$CODE_COVERAGE" = 1 ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
-  - if [ "$CODE_COVERAGE" = 1 ]; then php ocular.phar code-coverage:upload --format=php-clover ../build/logs/clover.xml; fi
+after_script: bash <(curl -s https://codecov.io/bash)
 
 stages:
   - coding-standard
@@ -37,17 +33,9 @@ stages:
 
 jobs:
   include:
-    - stage: coding-standard
-      before_install:
-      before_script:
-      script: ./vendor/bin/php-cs-fixer --diff --dry-run --verbose fix
-      after_script:
-      php: 7.2
-      env: CS_CHECK=1
-    - stage: test
-      php: 7.2
+    - php: 7.2
     - php: 7.3
-      env: CODE_COVERAGE=1
+    - php: 7.4snapshot
     - php: nightly
 
 matrix:
