--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,13 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
+        "php": ">=7.2.0",
         "ext-ctype": "*",
         "ext-filter": "*"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.2",
         "phpdocumentor/phpdocumentor": "2.*",
-        "phpunit/phpunit": "^4.8 || ^5.7",
+        "phpunit/phpunit": "^5.7",
         "zendframework/zend-serializer": "2.7.*",
         "doctrine/annotations": "1.2.*",
         "zendframework/zend-eventmanager": "3.0.*",
