:octocat: moved shellscripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ before_script:
   - sudo service postfix stop
   - smtp-sink -d "%d.%H.%M.%S" localhost:2500 1000 &
   - mkdir -p build/logs
-  - chmod +x test/fakesendmail.sh
+  - chmod +x scripts/fakesendmail.sh
   - sudo mkdir -p /var/qmail/bin
-  - sudo cp test/fakesendmail.sh /var/qmail/bin/sendmail
-  - sudo cp test/fakesendmail.sh /usr/sbin/sendmail
+  - sudo cp scripts/fakesendmail.sh /var/qmail/bin/sendmail
+  - sudo cp scripts/fakesendmail.sh /usr/sbin/sendmail
   - echo 'sendmail_path = "/usr/sbin/sendmail -t -i "' > $(php --ini|grep -m 1 "ini files in:"|cut -d ":" -f 2)/sendmail.ini
 
 script: ./vendor/bin/phpunit --configuration ./travis.phpunit.xml.dist --coverage-clover clover.xml
