--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,7 @@
     },
     "require-dev": {
         "phpdocumentor/phpdocumentor": "2.*",
-        "phpunit/phpunit": "^5.7",
-        "zendframework/zend-serializer": "2.7.*",
-        "doctrine/annotations": "1.2.*",
-        "zendframework/zend-eventmanager": "3.0.*",
-        "zendframework/zend-i18n": "2.7.3"
+        "phpunit/phpunit": "^5.7"
     },
     "suggest": {
         "psr/log": "For optional PSR-3 debug logging",
