--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,10 @@
 	"require": {
 		"php": ">=7.2.0",
 		"ext-ctype": "*",
-		"ext-filter": "*"
+		"ext-filter": "*",
+		"ext-mbstring": "*",
+		"ext-openssl": "*",
+		"psr/log": "^1.1"
 	},
 	"require-dev": {
 		"phpdocumentor/phpdocumentor": "2.*",
@@ -30,12 +33,9 @@
 		"league/oauth2-client": "^2.4"
 	},
 	"suggest": {
-		"psr/log": "For optional PSR-3 debug logging",
 		"league/oauth2-google": "Needed for Google XOAUTH2 authentication",
 		"hayageek/oauth2-yahoo": "Needed for Yahoo XOAUTH2 authentication",
-		"stevenmaguire/oauth2-microsoft": "Needed for Microsoft XOAUTH2 authentication",
-		"ext-mbstring": "Needed to send email in multibyte encoding charset",
-		"symfony/polyfill-mbstring": "To support UTF-8 if the Mbstring PHP extension is not enabled (^1.2)"
+		"stevenmaguire/oauth2-microsoft": "Needed for Microsoft XOAUTH2 authentication"
 	},
 	"autoload": {
 		"psr-4": {
