:octocat: phpdocumentor -> suggest

--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,11 @@
 		"psr/log": "^1.1"
 	},
 	"require-dev": {
-		"phpdocumentor/phpdocumentor": "2.*",
 		"phpunit/phpunit": "^8.0",
 		"league/oauth2-client": "^2.4"
 	},
 	"suggest": {
+		"phpdocumentor/phpdocumentor": "Needed for building docs from the docblocks",
 		"league/oauth2-google": "Needed for Google XOAUTH2 authentication",
 		"hayageek/oauth2-yahoo": "Needed for Yahoo XOAUTH2 authentication",
 		"stevenmaguire/oauth2-microsoft": "Needed for Microsoft XOAUTH2 authentication"
