--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ before_script:
   - sudo service postfix stop
   - mkdir -p logs
   - smtp-sink -d "./logs/%d.%H.%M.%S" localhost:2500 1000 &
-  - chmod +x scripts/fakesendmail.sh
+  - chmod +x scripts/travis.fakesendmail.sh
   - sudo mkdir -p /var/qmail/bin
-  - sudo cp scripts/fakesendmail.sh /var/qmail/bin/sendmail
-  - sudo cp scripts/fakesendmail.sh /usr/sbin/sendmail
+  - sudo cp scripts/travis.fakesendmail.sh /var/qmail/bin/sendmail
+  - sudo cp scripts/travis.fakesendmail.sh /usr/sbin/sendmail
   - echo 'sendmail_path = "/usr/sbin/sendmail -t -i "' > $(php --ini|grep -m 1 "ini files in:"|cut -d ":" -f 2)/sendmail.ini
 
 script: ./vendor/bin/phpunit --configuration ./travis.phpunit.xml
