--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ install: composer install --no-interaction --prefer-source
 
 before_script:
   - sudo service postfix stop
-  - mkdir -p logs
+  - sudo mkdir -p logs
+  - sudo mkdir -p /var/qmail/bin
   - smtp-sink -d "./logs/%d.%H.%M.%S" localhost:2500 1000 &
   - chmod +x scripts/travis.fakesendmail.sh
-  - sudo mkdir -p /var/qmail/bin
   - sudo cp scripts/travis.fakesendmail.sh /var/qmail/bin/sendmail
   - sudo cp scripts/travis.fakesendmail.sh /usr/sbin/sendmail
   - echo 'sendmail_path = "/usr/sbin/sendmail -t -i "' > $(php --ini|grep -m 1 "ini files in:"|cut -d ":" -f 2)/sendmail.ini
