--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - sudo apt-get install -y -qq postfix
 
 install:
-  - REMOVE_PACKAGE="friendsofphp/php-cs-fixer"; if [ "$CS_CHECK" = 1 ]; then REMOVE_PACKAGE="phpunit/phpunit"; fi; composer remove --no-update --no-scripts --dev $REMOVE_PACKAGE
+  - if [ "$CS_CHECK" = 1 ]; then REMOVE_PACKAGE="phpunit/phpunit"; fi; composer remove --no-update --no-scripts --dev $REMOVE_PACKAGE
   - composer remove --no-update --no-scripts --dev phpdocumentor/phpdocumentor
   - composer install
   - if [ "$CODE_COVERAGE" != 1 ]; then phpenv config-rm xdebug.ini || true; fi
@@ -45,7 +45,7 @@ jobs:
   include:
     - stage: coding-standard
       before_install:
-      before_script:
+      before_script: composer require friendsofphp/php-cs-fixer 2.2.20
       script: ./vendor/bin/php-cs-fixer --diff --dry-run --verbose fix
       after_script:
       php: 5.6
