--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,18 @@ cache:
   directories:
     - $HOME/.composer/cache
 
-before_install:
-  - sudo apt update -qq
-  - sudo apt install -y -qq postfix
-
 install: composer install --no-interaction --prefer-source
 
 before_script:
-  - sudo service postfix stop
   - mkdir -p logs
   - sudo mkdir -p /var/qmail/bin
-  - smtp-sink -d "./logs/%d.%H.%M.%S" localhost:2500 1000 &
   - chmod +x scripts/travis.fakesendmail.sh
   - sudo cp scripts/travis.fakesendmail.sh /var/qmail/bin/sendmail
   - sudo cp scripts/travis.fakesendmail.sh /usr/sbin/sendmail
   - echo 'sendmail_path = "/usr/sbin/sendmail -t -i "' > $(php --ini|grep -m 1 "ini files in:"|cut -d ":" -f 2)/sendmail.ini
+  - wget -q https://github.com/mailhog/MailHog/releases/download/v1.0.0/MailHog_linux_amd64
+  - sudo chmod +x ./MailHog_linux_amd64
+  - ./MailHog_linux_amd64 -smtp-bind-addr=localhost:2500 -storage=maildir -maildir-path=./logs
 
 script: ./vendor/bin/phpunit --configuration ./travis.phpunit.xml
 
