--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
 		"ext-intl": "*",
 		"ext-mbstring": "*",
 		"ext-openssl": "*",
-		"psr/log": "^1.1"
+		"psr/log": "^1.1",
+		"chillerlan/php-settings-container": "^1.2"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^8.4"
